# Virtual-Network-Embedding

./: README
Network generator/: gen.pl  mkreq.c  mksub.c  my_sim_request2500.sh  sub.alt  sub.sh
Sim_code/code/: CMakeLists.txt
Sim_code/code/VNE/: CMakeLists.txt  def.h  main.cpp  utility.cpp  utility.h
Sim_code/code/analysis/: CMakeLists.txt  In_Event.cpp  In_Event.h  def.h  main.cpp
Sim_code/code/statistics/: CMakeLists.txt  static2xls.cpp  static2xls.m
